--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,42 @@
-<p>login works!</p>
+<div class="login-container">
+    <h2>Log In</h2>
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input
+                type="email"
+                id="email"
+                formControlName="email"
+                placeholder="Enter your email"
+            />
+            <div
+                *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched"
+                class="error-message"
+            >Please Enter a valid email
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input
+                type="password"
+                id="password"
+                formControlName="password"
+                placeholder="Enter your password"
+            />
+            <div
+                *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched"
+                class="error-message"
+                >Password is required
+            </div>
+        </div>
+
+        <button type="submit" [disabled]="loginForm.invalid">Log In</button>
+
+        <div *ngIf="errorMessage" class="global-error-message">
+            {{ errorMessage }}
+        </div>
+    </form>
+    <p>Don't have an account? <a routerLink="/signup">Sign Up</a></p>
+</div>
