--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,1 +1,40 @@
-<p>register works!</p>
+<div class="signup-container">
+    <h2>Sign Up</h2>
+    <form [formGroup]="registerForm" (ngSubmit)="onSignUp()">
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input
+                type="email"
+                id="email"
+                formControlName="email"
+                placeholder="Enter your email"
+            />
+            <div
+                *ngIf="
+                registerForm.get('email')?.invalid && registerForm.get('email')?.touched"
+                class="error-message"            
+            >Please Enter a valid email
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input
+                type="password"
+                id="password"
+                formControlName="password"
+                placeholder="Enter your password"
+            />
+            <div
+                *ngIf="
+                registerForm.get('password')?.invalid && registerForm.get('password')?.touched"
+                class="error-message"
+            >Password must be at least 6 characters long
+            </div>
+        </div>
+        <button type="submit" [disabled]="registerForm.invalid">Sign Up</button>
+        <div *ngIf="errorMessage" class="global-error-message">
+            {{ errorMessage }}
+        </div>
+    </form>
+    <p>Already have an account? <a routerLink="/login">Log In</a></p>
+</div>
