--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: '7digital';
+    src: url(/src/asssets/digital-7/digital-7.ttf) format('truetype');
+}
+
+body {
+    font-family: '7digital', sans-serif;
+}
