--- a/src/app/time-visualizer/time-visualizer.component.html
+++ b/src/app/time-visualizer/time-visualizer.component.html
@@ -1,4 +1,5 @@
 <app-navbar [currentUser]="currentUser"></app-navbar>
 <div class="home-container">
-  <h2>Welcome!</h2>
+  <app-digital-clock></app-digital-clock>
+  <app-analog-clock></app-analog-clock>
 </div>
