--- a/src/app/time-visualizer/time-visualizer.component.css
+++ b/src/app/time-visualizer/time-visualizer.component.css
@@ -1,6 +1,6 @@
 .home-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     height: 80vh;
