feat: add binary and candle clock components

--- a/src/app/time-visualizer/time-visualizer.component.html
+++ b/src/app/time-visualizer/time-visualizer.component.html
@@ -2,4 +2,6 @@
 <div class="home-container">
   <app-digital-clock></app-digital-clock>
   <app-analog-clock></app-analog-clock>
+  <app-binary-clock></app-binary-clock>
+  <app-candle-clock></app-candle-clock>
 </div>
