feat: implement shadow clock and water glass clock components and added time slider component for manual time adjustment

--- a/src/app/time-visualizer/time-visualizer.component.html
+++ b/src/app/time-visualizer/time-visualizer.component.html
@@ -1,7 +1,10 @@
 <app-navbar [currentUser]="currentUser"></app-navbar>
 <div class="home-container">
+  <app-time-slider></app-time-slider>
   <app-digital-clock></app-digital-clock>
   <app-analog-clock></app-analog-clock>
   <app-binary-clock></app-binary-clock>
   <app-candle-clock></app-candle-clock>
+  <app-shadow-clock></app-shadow-clock>
+  <app-water-glass-clock></app-water-glass-clock>
 </div>
