--- a/src/app/time-visualizer/time-visualizer.component.html
+++ b/src/app/time-visualizer/time-visualizer.component.html
@@ -7,4 +7,5 @@
   <app-candle-clock></app-candle-clock>
   <app-shadow-clock></app-shadow-clock>
   <app-water-glass-clock></app-water-glass-clock>
+  <app-word-clock></app-word-clock>
 </div>
