feat: added Bar Clock component

--- a/src/app/time-visualizer/time-visualizer.component.html
+++ b/src/app/time-visualizer/time-visualizer.component.html
@@ -8,4 +8,5 @@
   <app-shadow-clock></app-shadow-clock>
   <app-water-glass-clock></app-water-glass-clock>
   <app-word-clock></app-word-clock>
+  <app-bar-clock></app-bar-clock>
 </div>
